[package]
name = "realm-web-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Implementation of the realm-web npm package in rust."
repository = "https://github.com/codecrafter404/realm-web-rs"
readme = "README.md"
keywords = ["wasm", "realm", "api"]
categories = ["wasm", "web-programming", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.5.0"
builder-pattern = {version = "0.4.2", default-features=false}

reqwest = { version = "0.11.14", features = ["json", "stream", "rustls-tls-webpki-roots"], default-features=false}
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.53"
getrandom = { version = "0.2", features = ["js"] }